# Vismut

./: .gitignore  CMakeLists.txt  code.txt  code.vismut  main.c
Vismut/core/: Vismut.h  ansi_colors.c  ansi_colors.h  convert.c  convert.h  debug.h  types.c  types.h  types_maps.h
Vismut/core/ast/: ast.c  ast.h  ast_analyze.c  ast_analyze.h  ast_optimize.c  ast_optimize.h  ast_parse.c  ast_parse.h  ast_typing.c  ast_typing.h  scope.c  scope.h  value.h
Vismut/core/codegen/: codegen.c  codegen.h  run.c  run.h
Vismut/core/errors/: callstack.c  callstack.h  errors.c  errors.h
Vismut/core/hash/: murmur3.c  murmur3.h
Vismut/core/memory/: arena.c  arena.h
Vismut/core/tokenizer/: token.c  token.h  tokenizer.c  tokenizer.h
Vismut/io/reader/: reader.c  reader.h
Vismut/utils/: find_position.c  find_position.h  module_name.c  module_name.h  unicode_console.c  unicode_console.h
